update notebook and Readme

--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -33,31 +33,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SpgOu2PEVvJs",
-        "outputId": "b5699dcb-7cb4-46e2-9052-950cf7cc483f"
+        "id": "SpgOu2PEVvJs"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: free-mujoco-py in /usr/local/lib/python3.7/dist-packages (2.1.6)\n",
-            "Requirement already satisfied: imageio<3.0.0,>=2.9.0 in /usr/local/lib/python3.7/dist-packages (from free-mujoco-py) (2.19.0)\n",
-            "Requirement already satisfied: glfw<2.0.0,>=1.4.0 in /usr/local/lib/python3.7/dist-packages (from free-mujoco-py) (1.12.0)\n",
-            "Requirement already satisfied: Cython<0.30.0,>=0.29.24 in /usr/local/lib/python3.7/dist-packages (from free-mujoco-py) (0.29.28)\n",
-            "Requirement already satisfied: cffi<2.0.0,>=1.15.0 in /usr/local/lib/python3.7/dist-packages (from free-mujoco-py) (1.15.0)\n",
-            "Requirement already satisfied: fasteners==0.15 in /usr/local/lib/python3.7/dist-packages (from free-mujoco-py) (0.15)\n",
-            "Requirement already satisfied: numpy<2.0.0,>=1.21.3 in /usr/local/lib/python3.7/dist-packages (from free-mujoco-py) (1.21.6)\n",
-            "Requirement already satisfied: monotonic>=0.1 in /usr/local/lib/python3.7/dist-packages (from fasteners==0.15->free-mujoco-py) (1.6)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from fasteners==0.15->free-mujoco-py) (1.15.0)\n",
-            "Requirement already satisfied: pycparser in /usr/local/lib/python3.7/dist-packages (from cffi<2.0.0,>=1.15.0->free-mujoco-py) (2.21)\n",
-            "Requirement already satisfied: pillow>=8.3.2 in /usr/local/lib/python3.7/dist-packages (from imageio<3.0.0,>=2.9.0->free-mujoco-py) (9.1.0)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install free-mujoco-py"
       ]
@@ -69,6 +47,40 @@
       },
       "source": [
         "**Now you need to restart the runtime as numpy is apparently automatically imported...**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!unzip ./uncertainty-buffer.zip"
+      ],
+      "metadata": {
+        "id": "FkehGfNeuygS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd uncertainty-buffer/"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MKcl-J1mvMq5",
+        "outputId": "b251f48c-0a8d-40ea-8688-24f142464b1b"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/uncertainty-buffer\n"
+          ]
+        }
       ]
     },
     {
@@ -85,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "QTJwoXUgT5Q6"
       },
@@ -174,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "efuDRs1BUzt7"
       },
@@ -193,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "fbsI5wzHVR-a"
       },
@@ -383,35 +395,15 @@
         "n_experiments = 1"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 183
-        },
-        "id": "5482K_k0rhNb",
-        "outputId": "e87ddfbc-1028-4fde-a7e9-47df1ce91ee6"
+        "id": "5482K_k0rhNb"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-be559aa6f7ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0malg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMultiHeadSAC\u001b[0m \u001b[0;31m# Choose one out of [MultiHeadSAC, MultiHeadTD3, MultiHeadDDPG]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'MultiHeadSAC' is not defined"
-          ]
-        }
-      ]
+      "execution_count": 7,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "Yt11mOMoLpo9"
       },
       "outputs": [],
